fix --port --discover for mongostat SERVER-2457